# pluto

./: .air.toml  .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  download-tailwind.sh  go.mod  local.compose.yaml  main.go  postgres.compose.yaml  pretest.sh  setup-postgres.sh  setup-sqlite.sh  styles.css  tailwind.config.js
documentation/: project-structure.md
locales/: change_email.toml  change_password.toml  danger_zone.toml  dashboard.toml  general.toml  locales.toml  login.toml  profile.toml  profile_details.toml  register.toml
migrations/: 00001_users.sql  1705695925_users.sql  1705756441_sessions.sql  20240121192313_csrf-tokens.sql  20240121193313_users.sql  20240121193315_csrf-tokens.sql  20240121193316_sessions.sql  20240121193602_assets.sql  20240122193140_accounts.sql  20240125164145_transactions.sql  20240210201430_user-favorite-account-and-asset.sql
migrations/pg/: 1713440494_users.sql  1715707420_sessions.sql
migrations/sqlite/: 1713440494_users.sql  1715707420_sessions.sql
rfcs/: 00001-rfc-process.md  00002-database.md  00003-deny-flags.md  00003-forbid-flags.md  00004-async-runtime.md  00005-architecture.md  _template.md
src/: assets.rs  compression.rs  config.rs  content_security_policy.rs  csrf_tokens.rs  dashboard.rs  database.rs  errors.rs  healthcheck.rs  imkvs.rs  lib.rs  login_page.rs  main.rs  ping.rs  ping_api.rs  register_api.rs  register_email_taken_page.rs  shutdown.rs  static_files.rs  status.rs  styles.css  templates.rs  user.rs  users.rs  validation.rs
src/accounts/: component.rs  list.rs  mod.rs  ownership.rs
src/action/: mod.rs
src/assets/: component.rs  list.rs  list_page.rs  mod.rs
src/auth/: logout.rs  mod.rs  password_hasher.rs  principal.rs  session.rs
src/core/: config.rs  database.rs  mod.rs  shutdown.rs
src/domain/: authentication.rs  authorization.rs  change_email.rs  change_password.rs  configuration.rs  delete_user.rs  identifier.rs  keys.rs  logout.rs  mod.rs  passwords.rs  registration.rs  sessions.rs  shutdown.rs  users.rs  (+1 more)
static/: auth-pages.css  clear.css  globals.css  palette.css  script.js  styles.css
templates/: blank-page.html  dashboard.html  login-page.html  page-with-nav.html  page.html  register-email-taken-page.html  register-page.html
www/: middleware.go  router.go  statics.go  templates.go
(+238 files in other folders)
