[package]
name = "pluto"
version = "0.0.0"
edition = "2021"

[dependencies]
askama = "0"
async-trait = "0"
axum = "0"
axum-extra = { version = "0", features = ["typed-header"] }
config = "0"
dotenv = "0"
mime_guess = "2"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0", features = ["runtime-tokio", "postgres", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower = "0"
tower-http = { version = "0", features = ["compression-full"] }
tracing = "0"
tracing-subscriber = "0"
