[package]
name = "pluto"
version = "0.0.0"
edition = "2021"

[dependencies]
askama = "0"
async-trait = "0"
axum = "0"
axum-extra = { version = "0", features = ["typed-header"] }
cached = "0"
config = "0"
crockford = "1"
dotenv = "0"
hex = "0"
maud = { version = "0", features = ["axum"] }
rust-embed = { version = "8", features = ["mime-guess"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0"
sqlx = { version = "0", features = ["runtime-tokio", "postgres", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower = "0"
tower-http = { version = "0", features = ["compression-full"] }
tracing = "0"
tracing-subscriber = "0"

[build-dependencies]
reqwest = { version = "0", features = ["blocking"] }
