[package]
name = "pluto"
version = "0.0.0"
edition = "2021"

[package.metadata.i18n]
default-locale = "en"
minify-key = true

[dependencies]
accept-language = "3"
argon2 = "0"
askama = "0"
async-trait = "0"
axum = "0"
axum-extra = { version = "0", features = ["typed-header", "cookie-private", "cookie-key-expansion"] }
cached = "0"
chrono = "0"
config = "0"
crockford = "1"
dotenv = "0"
email_address = "0"
hex = "0"
maud = { version = "0", features = ["axum"] }
rust-embed = { version = "8", features = ["mime-guess"] }
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
sha2 = "0"
sqlx = { version = "0", features = ["runtime-tokio", "postgres", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower = "0"
tower-http = { version = "0", features = ["compression-full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
zxcvbn = "2"

[build-dependencies]
reqwest = { version = "0", features = ["blocking"] }
